# example-todo-app-rust-htmx

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: db.rs  main.rs
templates/: index.html.hbs  todo-cards.html.hbs  todo-edit.html.hbs  todo-read.html.hbs
