[package]
name = "example-todo-app-rust-htmx"
version = "1.0.0"
edition = "2024"

[dependencies]

# db
sqlx = { version = "0.8.3", features = ["runtime-async-std", "sqlite"] }

# web framework
rocket = "0.5.1"

# templating
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0.217", features = ["derive"] }
